Repaired small mistake with card spill

--- a/style.css
+++ b/style.css
@@ -141,6 +141,6 @@ img {
   @media only screen and (min-width:900px){
     .spill{
       position:absolute;
-      bottom:220px;
+      bottom:-110px;
     }
   }
